<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_small"
            android:src="@drawable/ic_before_white_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/ecobox"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etCompanyName"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/item_height"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlActionBar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/item_height"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCompanyName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPhone"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/item_height"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etAddress"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/item_height"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSend"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/item_height"
        android:layout_margin="@dimen/margin_standard"
        android:text="@string/send"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAddress" />
</androidx.constraintlayout.widget.ConstraintLayout>