<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="@dimen/margin_standard"
        android:src="@drawable/round_person_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_standard"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@id/imgAvatar"
        app:layout_constraintTop_toTopOf="@id/imgAvatar" />

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:drawableLeft="@drawable/ic_outline_cup"
        android:drawableTint="@android:color/holo_orange_light"
        android:text="1 - место"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tvBio"
        app:layout_constraintTop_toBottomOf="@id/tvBio" />

    <TextView
        android:id="@+id/tvMarket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:drawableEnd="@drawable/ic_next"
        android:text="@string/market"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintTop_toBottomOf="@id/imgAvatar" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/tvMarket" />

    <TextView
        android:id="@+id/tvStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_small"
        android:drawableEnd="@drawable/ic_next"
        android:text="@string/stats"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_standard"
        app:layout_constraintTop_toBottomOf="@id/line" />


</androidx.constraintlayout.widget.ConstraintLayout>