<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_small"
            android:src="@drawable/ic_before_white_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/want_franchise"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/item_height"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlActionBar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPhone"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/item_height"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <Spinner
        android:id="@+id/spCity"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhone" />

    <!--    <TextView-->
    <!--        android:id="@+id/tvCity"-->
    <!--        android:layout_width="@dimen/match_constraint"-->
    <!--        android:layout_height="@dimen/item_height"-->
    <!--        android:layout_margin="@dimen/margin_standard"-->
    <!--        android:gravity="center_vertical"-->
    <!--        android:text="@string/city"-->
    <!--        android:textSize="@dimen/text_size_standard"-->
    <!--        app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/etPhone" />-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etMessageText"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:gravity="top"
        android:hint="@string/message"
        android:lines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spCity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSend"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/item_height"
        android:layout_margin="@dimen/margin_standard"
        android:text="@string/send"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMessageText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>